--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,12 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+.menu-card {
+    @apply flex flex-col justify-center items-center bg-white h-screen font-mono py-20;
+  }
+  
+  .center-content {
+    @apply flex flex-col justify-center items-center;
+  }
+  
